dummy commit to check heatmap

--- a/2_preference_alignment/notebooks/dpo_finetuning_example.ipynb
+++ b/2_preference_alignment/notebooks/dpo_finetuning_example.ipynb
@@ -2029,7 +2029,7 @@
     {
       "cell_type": "code",
       "source": [
-        "##"
+        "## finished"
       ],
       "metadata": {
         "id": "SWWEslKDDncj"
